[FIX] mail: ensure minimum height on textarea to keep visibility
The chatter's textarea gets resized dynamically. However no minimum
height is set so we can end up with a height of 0. This was the case
when the chatter was added to a notebook's tab, like in mass_mailing.
This sets that minimum height so it is equal to that of its parent.

Task-2545445

closes odoo#71511

--- a/addons/mail/static/src/components/composer_text_input/composer_text_input.scss
+++ b/addons/mail/static/src/components/composer_text_input/composer_text_input.scss
@@ -17,6 +17,7 @@
 
 .o_ComposerTextInput_textareaStyle {
     padding: 10px; // carefully crafted to have the text in the middle in chat window
+    min-height: 40px;
     resize: none;
     border-radius: $o-mail-rounded-rectangle-border-radius-lg;
     border: none;
